Change API base URL to VPS address
Updated API base URL to point to VPS.

--- a/index.html
+++ b/index.html
@@ -598,8 +598,8 @@
             "gaz_69": { name: "ГАЗ-69", price: 0, emoji: "🚙", tier: "legendary" },
         };
 
-        // API base URL - измените на ваш сервер
-        const API_URL = 'https://your-server.com/api';
+        // API base URL вашего VPS
+        const API_URL = 'http://147.45.185.6:5000/api';
 
         // Get user data from Telegram
         const user = tg.initDataUnsafe.user;
