--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
         };
 
         // API base URL вашего VPS
-        const API_URL = 'http://147.45.185.6:5000/api';
+        const API_URL = 'https://28a32d89129971.lhr.life/api';
 
         // Get user data from Telegram
         const user = tg.initDataUnsafe?.user;
