--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
         };
 
         // API base URL вашего VPS
-        const API_URL = 'https://28a32d89129971.lhr.life/api';
+        const API_URL = 'https://a45541c48aelb8.lhr.life/api';
 
         // Get user data from Telegram
         const user = tg.initDataUnsafe?.user;
